src/objects/Master_Award__c.object
<CustomObject>
    <fields>
        <fullName>AR_Email__c</fullName>
        <label>AR Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application3__c</referenceTo>
        <relationshipLabel>Master Awards</relationshipLabel>
        <relationshipName>Master_Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutoNumberNew__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>AutoNumberNew</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Auto_Number__c</fullName>
        <description>Auto Number for Grant # (FAIN).</description>
        <displayFormat>{0000}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Award_ID__c</fullName>
        <description>Should be updated from Award record.</description>
        <label>Award ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance_Undrawn__c</fullName>
        <description>Value to be populated from Momentum.</description>
        <label>Balance Undrawn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance_Unexpended__c</fullName>
        <description>Field to be updated from Momentum.</description>
        <label>Balance Unexpended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commitment__c</fullName>
        <description>Value to be populated from Momentum.</description>
        <label>Commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Create_Grant_Close_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Closeout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Auto_Number__c</fullName>
        <label>Custom Auto Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deobligated_at_Closeout__c</fullName>
        <label>Deobligated at Closeout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Drawdowns__c</fullName>
        <description>Value to be populated from Momentum.</description>
        <label>Drawdowns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dummy_State_CLR_Code__c</fullName>
        <label>Dummy State CLR Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expenditures__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value to be populated from Momentum.</description>
        <label>Expenditures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FAIN_New__c</fullName>
        <formula>IF (ISPICKVAL (
Application__r.NOFA_RFP__r.Issuing_Officer__c, &quot;HQ(Office of Grants Management)&quot;), FAIN__c + &apos;H&apos; +
TEXT(Application__r.Project__r.State__c)+ Auto_Number__c , FAIN__c +
State_CLR_Code__c + TEXT(Application__r.Project__r.State__c)+ RIGHT( AutoNumberNew__c , 3))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FAIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAIN_Prime__c</fullName>
        <formula>RIGHT(TEXT(Prime_Application__r.NOFO_RFP__r.Fiscal_Yr__c  ),2)+ 
Prime_Application__r.NOFO_RFP__r.CNCS_Corporate_Program__r.Short_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FAIN_Prime</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAIN__c</fullName>
        <formula>RIGHT(TEXT( Application__r.NOFA_RFP__r.Fiscal_Yr__c ),2)+ 
Application__r.NOFA_RFP__r.CNCS_Corporate_Program__r.Short_Code__c</formula>
        <label>FAIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Award_Identification_Number__c</fullName>
        <description>Field gets updated by Workflow Rule. 
WF Rule = Update FAIN</description>
        <label>Federal Award Identification Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Closed_Amount__c</fullName>
        <label>Final Closed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForCustomAuto_FAIN_Prime__c</fullName>
        <formula>RIGHT(TEXT(Prime_Application__r.NOFO_RFP__r.Fiscal_Yr__c ),2)+ &apos;AC&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ForCustomAuto FAIN Prime</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForCustomAuto_FAIN__c</fullName>
        <formula>RIGHT(TEXT( Application__r.NOFA_RFP__r.Fiscal_Yr__c ),2)+ &apos;AC&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ForCustomAuto_FAIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GO_Phone__c</fullName>
        <label>GO Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GO_Title__c</fullName>
        <label>GO Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Performance_Period_End_Date__c</fullName>
        <label>Grant Performance Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Performance_Period_Start_Date__c</fullName>
        <label>Grant Performance Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Type__c</fullName>
        <label>Grant Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grants_Officer_Email__c</fullName>
        <label>Grants Officer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Grants_Officer__c</fullName>
        <label>Grants Officer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Grant_ID__c</fullName>
        <description>This is the legacy grant ID for this master award from eSPAN. It is used for data migration.</description>
        <externalId>true</externalId>
        <label>Legacy Grant ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_supp_mech_cd__c</fullName>
        <description>Migrated supp_mech_cd</description>
        <label>Legacy_supp_mech_cd</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Applicant_Name__c</fullName>
        <label>Organization</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Application ID of the first New Application in the cycle.</description>
        <label>Master Parent</label>
        <referenceTo>Application3__c</referenceTo>
        <relationshipLabel>Master Awards (Master Parent)</relationshipLabel>
        <relationshipName>Master_Awards1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_of_Award_Years__c</fullName>
        <formula>Application__r.NOFA_RFP__r.Max_of_Award_Years__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max # of Award Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NOFO_RFP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOFO/RFP</label>
        <referenceTo>NOFA__c</referenceTo>
        <relationshipLabel>Master Awards</relationshipLabel>
        <relationshipName>Master_Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Amended_Awards__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Amended Awards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Child_Awards__c</fullName>
        <description>Roll up of all Awards.</description>
        <label>Number of Child Awards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_Monitoring_Activities__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Open Monitoring Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Obligation__c</fullName>
        <description>Value to be populated from Momentum.</description>
        <label>Obligation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Org_Address__c</fullName>
        <label>Org Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Id__c</fullName>
        <formula>Application__r.Organization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Name__c</fullName>
        <label>Org Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PD_Email__c</fullName>
        <label>PD Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Prime_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prime Application</label>
        <referenceTo>Prime_Application__c</referenceTo>
        <relationshipLabel>Master Awards</relationshipLabel>
        <relationshipName>Master_Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Officer_Email__c</fullName>
        <description>Program Officer Email field which is used in the workflow</description>
        <label>Program Officer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Program_Officer__c</fullName>
        <label>Program Officer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Director_Name__c</fullName>
        <label>Project Director Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Director_Title__c</fullName>
        <label>Project Director Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Name</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Master Awards</relationshipLabel>
        <relationshipName>Master_Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Period_End_date__c</fullName>
        <formula>Project_Name__r.Project_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Period End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Period_Start_Date__c</fullName>
        <formula>Project_Name__r.Project_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_CLR_Code__c</fullName>
        <formula>IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;CA&quot;),&quot;P&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;WA&quot;),&quot;P&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;AK&quot;),&quot;P&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;HI&quot;),&quot;P&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;ID&quot;),&quot;P&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;MT&quot;),&quot;P&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;NV&quot;),&quot;P&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;OR&quot;),&quot;P&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;UT&quot;),&quot;P&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;WY&quot;),&quot;P&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;GU&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;AS&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;MP&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;PA&quot;) , &quot;A&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;NJ&quot;) , &quot;A&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;ME&quot;) , &quot;A&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;NH&quot;) , &quot;A&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;RI&quot;) , &quot;A&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;CT&quot;) , &quot;A&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;VT&quot;) , &quot;A&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;MA&quot;) , &quot;A&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;DE&quot;) , &quot;A&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;MD&quot;),&quot;A&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;PR&quot;) , &quot;A&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;DC&quot;) , &quot;A&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;IL&quot;) , &quot;N&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;OH&quot;) , &quot;N&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;WI&quot;) , &quot;N&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;IN&quot;) , &quot;N&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;IA&quot;) , &quot;N&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;MI&quot;) , &quot;N&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;MN&quot;) , &quot;N&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;NE&quot;) , &quot;N&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;SD&quot;) , &quot;N&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;ND&quot;) , &quot;N&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;FL&quot;) , &quot;S&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;GA&quot;) , &quot;S&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;AL&quot;) , &quot;S&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;MS&quot;) , &quot;S&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;TN&quot;) , &quot;S&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;SC&quot;) , &quot;S&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;KY&quot;) , &quot;S&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;WV&quot;) , &quot;S&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;VA&quot;) , &quot;S&quot;, 
IF( ISPICKVAL( Application__r.Project__r.State__c , &quot;NC&quot;) , &quot;S&quot;, 
&quot;W&quot;)))))))))))))))))))))))))))))))))))))))))))))</formula>
        <label>State CLR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field stores the status of the Master Award</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Obligated_Amount__c</fullName>
        <label>Total Obligated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unexpended_Amount__c</fullName>
        <label>Total Unexpended Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unobligated__c</fullName>
        <formula>((Commitment__c -  Obligation__c ) /  Commitment__c)*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unobligated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Waiver_Approved__c</fullName>
        <formula>Project_Name__r.Waiver_Approved__c</formula>
        <label>Waiver Approved</label>
        <type>Date</type>
    </fields>
    <label>Master Award</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Legal_Applicant_Name__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Auto_Number__c</columns>
        <columns>AutoNumberNew__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>GO_Group</group>
            <group>PO_Group</group>
            <group>SGO_Group</group>
            <group>SPO_Group</group>
            <group>XO_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Prime_Sub_Awards</fullName>
        <columns>NAME</columns>
        <columns>Legal_Applicant_Name__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Master_Award__c.Prime_Master_Award,Master_Award__c.Sub_App_Master_Award</value>
        </filters>
        <label>Prime/Sub Awards</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>GO_Group</group>
            <group>PO_Group</group>
            <group>SGO_Group</group>
            <group>SPO_Group</group>
            <group>XO_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Federal Award Identification Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Awards</pluralLabel>
    <recordTypes>
        <fullName>App_Master_Award</fullName>
        <active>true</active>
        <label>App Master Award</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prime_Master_Award</fullName>
        <active>true</active>
        <label>Prime Master Award</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sub_App_Master_Award</fullName>
        <active>true</active>
        <label>Sub App Master Award</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>